[metadata]
name = sibyl_tool
version = 0.1.2
author = Fabrice Harel-Canada
author_email = fabriceyhc@gmail.com
description = A tool for sibylvariant transformations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fabriceyhc/Sibyl
project_urls =
    Bug Tracker = https://github.com/fabriceyhc/Sibyl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
include_package_data = True


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    emoji_translate==0.1.0
    pattern
    transformers-interpret
    pke-tool

[options.packages.find]
where = src


[options.package_data]
* = *.txt
